chore: Rename pgbouncerConf to parameters
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>